--- a/src/main/webapp/inn.css
+++ b/src/main/webapp/inn.css
@@ -3,6 +3,13 @@
 	display: flex;
 	flex-wrap: wrap;
 }
+.flex-fit{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+
 .lelative{
 	position: relative;
 }
@@ -49,8 +56,9 @@
 	text-align: left;
 }
 .border{
-	border: solid 1px rgb(128, 128, 128);
+	border: solid 3px rgb(128, 128, 128);
 	border-radius: 10px;
+	margin: 5px;
 }
 .inline-block{
 	display: inline-block;
@@ -60,7 +68,7 @@
 }
 .background-box{
 	background-color:cadetblue;
-	height: 50px;
+	height: 70px;
 }
 .button{
 	background-color: lightyellow;
@@ -73,6 +81,8 @@
 }
 .plan-table{
 	width:100%;
+	border: none;
+	outline: none;
 }
 .color-wh{
 	background-color: white;
@@ -113,4 +123,24 @@ button{
 .textbox-size{
 	width:200px;
 	height: 30px;
+}
+.t-size{
+	font-size:35px ;
+}
+.no-border{
+	border: none;
+	outline: none;
+	border-collapse: collapse;
+}
+.border-2{
+	border: solid 3px rgb(128, 128, 128);
+}
+.b-top{
+	border-top:solid 1.3px black;
+}
+.w-max{
+	width: 100%;
+}
+.b-fit-size{
+	background-color: darkseagreen;
 }
