デザイン修正

--- a/src/main/webapp/menu.css
+++ b/src/main/webapp/menu.css
@@ -83,7 +83,7 @@ dialog{
 
 button{
 	color: black;
-	background-color: rgb(230,230,230);
+	background-color:lightyellow;
 	width: 120px;
 	height: 35px;
 	font-size: 20px;
